--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -42,6 +42,8 @@ p {
 .apk {
     @media (max-width: 991px) {
     text-align: center;
+    font-size: 15px;
+
      }
     a {
         padding: 8px 24px;
@@ -52,6 +54,7 @@ p {
         @media (max-width: 991px) {
             text-align: center;
             margin: 0 auto;
+            background: #fff;
         }
     }
 }
@@ -70,12 +73,7 @@ section {
     }
 }
 @media (max-width: 992px) {
-  .navbar-collapse {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    right: auto !important;
-  }
+
   .single-page a {
       padding: 32px 18px;
       line-height: 38px !important;
