--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -75,7 +75,7 @@ a {
     .navbar-nav {
         > li {
             position: relative;
-            margin-left: 16px;
+            margin: 0 2px;
 
             > a {
                 font-size: 19px !important;
