--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -313,9 +313,11 @@ section.features {
     background: #fff;
     h1 {
         font-weight: 600;
+        margin: 60px 0 40px 0;
     }
     h2 {
         font-weight: 600;
+         margin: 60px 0 40px 0;
     }
     h3 {
         font-size: 1.1rem;
