--- a/scss/_watch-app.scss
+++ b/scss/_watch-app.scss
@@ -1,11 +1,11 @@
 body.watch-app {
-	background: #f9f9f9;
+	background: #fff;
 }
 .watch-app #mainNav {
-	background: #f9f9f9;
+	background: #fff;
 }
 header.masthead.watch-app {
-	background: #f9f9f9;
+	background: #fff;
 }
 header.masthead.watch-app .header-content {
 	color: #312F2D;
@@ -111,5 +111,5 @@ header.masthead.watch-app .header-content {
 	}
 }
 .watchfooter {
-	background: #f9f9f9;
+	background: #fff;
 }
