--- a/scss/_lndhub.scss
+++ b/scss/_lndhub.scss
@@ -2,7 +2,7 @@
 	background: #151F23;
 	color: #fff;
     .first {
-        padding: 86px 0 180px 0;
+        padding: 86px 0 180px 0 !important;
         height: 80vh;
         .section-heading 
         img {
@@ -43,6 +43,7 @@
     }
     img {
         max-width: 100%;
+        height: auto;
     }
 }
 .where {
