--- a/css/new-age.css
+++ b/css/new-age.css
@@ -2397,7 +2397,7 @@ img {
 
 @media (max-width: 992px) {
   .local-top .section-heading h1 {
-    font-size: 32px !important;
+    font-size: 42px !important;
   }
 }
 
@@ -2409,6 +2409,12 @@ img {
   font-size: 22px;
 }
 
+@media (max-width: 991px) {
+  .local-top p {
+    font-size: 16px;
+  }
+}
+
 .local-top .imghero img {
   max-width: 440px;
 }
@@ -2417,9 +2423,16 @@ img {
   margin: 32px 0;
 }
 
-@media (min-width: 991px) {
+@media (min-width: 992px) {
   .local-top .badges .badge-link {
     margin: 0 8px;
+  }
+}
+
+@media (max-width: 991px) {
+  .local-top .badges .badge-link {
+    margin: 8px 0;
+    display: inline-block;
   }
 }
 
@@ -2435,24 +2448,36 @@ img {
   padding: 90px 0;
 }
 
-.local-features .tell {
-  margin: 0 0 180px 0;
+@media (max-width: 991px) {
+  .local-features h2 {
+    margin: 0;
+  }
 }
 
 .local-features .tell div {
   border-radius: 8px;
-  box-shadow: 0px 6px 18px 3px rgba(36, 92, 141, 0.08);
-  margin: 0 12px;
-  max-width: 31%;
+  box-shadow: 0px 3px 18px 3px rgba(36, 92, 141, 0.08);
   padding: 48px 24px;
 }
 
-.local-features .tell div:last-child {
-  margin-right: 0;
+@media (min-width: 992px) {
+  .local-features .tell div {
+    margin: 0 0 180px 0;
+    max-width: 31%;
+    margin: 0 12px;
+  }
+  .local-features .tell div:last-child {
+    margin-right: 0;
+  }
+  .local-features .tell div:first-child {
+    margin-left: 0;
+  }
 }
 
-.local-features .tell div:first-child {
-  margin-left: 0;
+@media (max-width: 991px) {
+  .local-features .tell div {
+    margin: 0 0 24px 0;
+  }
 }
 
 .local-features h4 {
@@ -2467,9 +2492,29 @@ img {
   margin: 0;
 }
 
+@media (max-width: 991px) {
+  .local-features .localexplain div {
+    display: flex;
+    flex-direction: column;
+    margin: 24px 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .local-features .localexplain .order1 {
+    order: 1;
+  }
+}
+
+@media (max-width: 991px) {
+  .local-features .localexplain .order2 {
+    order: 2;
+  }
+}
+
 .local-features .localexplain p {
   display: block;
-  margin: 32px;
+  margin: 32px 0;
 }
 
 .local-features .localexplain span {
@@ -2480,14 +2525,28 @@ img {
 
 .local-features .hodlhodl {
   border-radius: 18px;
-  margin: 160px 0;
+  margin: 200px 0 100px 0;
   padding: 80px 40px;
   background: #0d89fc;
   background: linear-gradient(90deg, #0d89fc 0%, #3eb5ef 100%);
+}
+
+@media (max-width: 991px) {
+  .local-features .hodlhodl {
+    margin: 100px 0 0px 0;
+  }
 }
 
 .local-features .hodlhodl p {
   color: #fff;
   font-weight: 540;
   font-size: 20px;
+  margin: 0;
+}
+
+@media (max-width: 991px) {
+  .local-features .hodlhodl p {
+    text-align: center;
+    margin-top: 32px;
+  }
 }
