--- a/scss/_local.scss
+++ b/scss/_local.scss
@@ -109,6 +109,9 @@
 			display: inline-block;
 		}
 	}
+	a:hover {
+		text-decoration: none;
+	}
 	.hodlhodl {
 		border-radius: 18px;
 		margin: 200px 0 100px 0;
