upgrade desktop app

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  font-family: 'Helvetica', 'Arial', 'sans-serif';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 a {
@@ -30,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Helvetica', 'Arial', 'sans-serif';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 200;
 }
 
@@ -38,6 +38,10 @@ p {
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 20px;
+}
+
+.apk {
+  color: #9AA0AA;
 }
 
 @media (max-width: 991px) {
@@ -48,9 +52,6 @@ p {
 }
 
 .apk a {
-  padding: 8px 24px;
-  background: rgba(0, 0, 0, 0.05);
-  border-radius: 6px;
   display: inline-block;
   color: #9AA0AA;
 }
@@ -155,7 +156,7 @@ a {
 
 #mainNav .navbar-brand {
   color: #0C2550;
-  font-family: 'Helvetica', 'Arial', 'sans-serif';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 200;
 }
 
@@ -314,8 +315,8 @@ header.masthead .header-content h2 {
 }
 
 header.masthead .header-content h1 {
-  font-size: 50px;
-  font-weight: 600;
+  font-size: 60px;
+  font-weight: 700;
 }
 
 @media (max-width: 991px) {
@@ -2553,4 +2554,155 @@ img {
     text-align: center;
     margin-top: 32px;
   }
+}
+
+body.desktop-app {
+  background: #fff;
+}
+
+.desktop-app #mainNav {
+  background: #fff;
+}
+
+header.masthead.desktop-app {
+  background: #fff;
+}
+
+.desktop-app .header-content {
+  color: #000000;
+}
+
+.desktop-app .header-content h1 {
+  font-size: 72px;
+  font-weight: 800;
+  margin-bottom: 18px;
+}
+
+.desktop-app .header-content p {
+  font-size: 22px;
+}
+
+@media (max-width: 992px) {
+  .desktop-app .header-content h1 {
+    font-size: 250%;
+  }
+  .desktop-app .header-content p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 992px) {
+  .desktop-app .wat {
+    margin-bottom: 80px;
+  }
+}
+
+.desktop-app .cta {
+  margin: 32px;
+}
+
+@media (max-width: 992px) {
+  .desktop-app .cta li {
+    width: 100% !important;
+  }
+}
+
+.desktop-app .bighead3 {
+  text-align: center;
+}
+
+.desktop-app .bighead3 img {
+  width: 100%;
+}
+
+.desktop-app .local-features {
+  padding: 0;
+  margin-bottom: 90px;
+}
+
+.desktop-app .local-features h2 {
+  color: #000000;
+  font-size: 48px;
+  font-weight: 600;
+  margin: 0;
+  padding: 90px 0;
+}
+
+@media (max-width: 991px) {
+  .desktop-app .local-features h2 {
+    margin: 0;
+  }
+}
+
+.desktop-app .local-features .tell div {
+  border-radius: 8px;
+  box-shadow: 0px 3px 18px 3px rgba(36, 92, 141, 0.08);
+  padding: 48px 24px;
+}
+
+@media (min-width: 992px) {
+  .desktop-app .local-features .tell div {
+    margin: 0 0 180px 0;
+    max-width: 31%;
+    margin: 0 12px;
+  }
+  .desktop-app .local-features .tell div:last-child {
+    margin-right: 0;
+  }
+  .desktop-app .local-features .tell div:first-child {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .desktop-app .local-features .tell div {
+    margin: 0 0 24px 0;
+  }
+}
+
+.desktop-app .local-features h4 {
+  color: #000000;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.desktop-app .local-features p {
+  color: #666666;
+  font-size: 15px;
+  margin: 0;
+}
+
+@media (max-width: 991px) {
+  .desktop-app .local-features .localexplain div {
+    display: flex;
+    flex-direction: column;
+    margin: 24px 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .desktop-app .local-features .localexplain .order1 {
+    order: 1;
+  }
+}
+
+@media (max-width: 991px) {
+  .desktop-app .local-features .localexplain .order2 {
+    order: 2;
+  }
+}
+
+.desktop-app .local-features .localexplain p {
+  display: block;
+  margin: 32px 0;
+}
+
+.desktop-app .local-features .localexplain span {
+  color: #062453;
+  font-weight: bold;
+  display: inline-block;
+}
+
+.desktop-app .local-features a:hover {
+  text-decoration: none;
 }
