--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -40,15 +40,13 @@ p {
     margin-bottom: 20px;
 }
 .apk {
+   color: #9AA0AA;
     @media (max-width: 991px) {
     text-align: center;
     font-size: 15px;
 
      }
     a {
-        padding: 8px 24px;
-        background: rgba(0,0,0,.05);
-        border-radius: 6px;
         display: inline-block;
         color: #9AA0AA;
         @media (max-width: 991px) {
