--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -58,12 +58,13 @@
 }
 
 @mixin heading-font {
-    font-family: 'Helvetica', 'Arial', 'sans-serif';
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: 200;
 }
 
 @mixin body-font {
-    font-family: 'Helvetica', 'Arial', 'sans-serif';
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
 }
 
 @mixin alt-font {
