--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -370,3 +370,12 @@ section.features {
         }
     }
 }
+.warning {
+    background: #F4D096;
+    color: #A46A09;
+    border-radius: 20px;
+    padding: 4px 8px;
+    font-size: 11px;
+    vertical-align: middle;
+    margin-left: 8px;
+}
